added crud expense-service + some fix in open api generator (expense service getExpenses dont work correctly
